# pattern-matching

./: README.md
data/: EURUSD_day.csv  USDCHF_day.csv  USDCHF_hour.csv
harmonics/monad/: CSV.hs  CandleStick.hs  ExtremumMatcher.hs  ExtremumMatcherTests.hs  OpenGLDebugHelp.hs  PatternMatcher.hs  PatternMatcherTests.hs  PriceBar.hs  PriceBarTests.hs  README.md  SampleApp.hs  SampleGraphApp.hs  SampleGraphBindings.hs  SampleGraphDisplay.hs  TestFramework.hs  makefile  monadic-matcher.cabal
harmonics/pure/: CSV.hs  CandleStick.hs  Harmonics.hs  HarmonicsTests.hs  OpenGLDebugHelp.hs  PriceBar.hs  README.md  SampleGraphApp.hs  SampleGraphBindings.hs  SampleGraphDisplay.hs  SimRunner.hs  TestFramework.hs  makefile  pure-matcher.cabal
trend-analysis/: Account.hs  Acct.hs  AcctTests.hs  ExtremumMatcher.hs  PriceBar.hs  README.md  SimRunner.hs  Simulation.hs  TestFramework.hs  TrendAnalysis.hs  Utilities.hs  trend-analyzer.cabal
