Name:           trend-analyzer
Version:        0.1
Synopsis:       A pure functional harmonic pattern matcher
Description:
  Two Haskell programs that demonstrate pattern matcher by
  way of a monadic pipeline. Price bars feed the extrema
  matcher, which in turn feeds the pattern matcher. The
  program monadic-matcher counts the patterns and has not been
  tuned to exclude any. The monadic-viewer program simply
  displays a naked price chart--no axes, labels or patterns.
License:        BSD3
Build-Type:     Simple
Author:         Bob Grudem
Maintainer:     bobgru@hotmail.com
Cabal-Version:  >= 1.2

Executable trend-analyzer
  Build-Depends:  base, OpenGL, parsec, mtl
  Main-Is:        SimRunner.hs

Test-Suite account-tests
  Type:           exitcode-stdio-1.0
  Main-Is:        AcctTests.hs
  Build-Depends:  base
