Name:           monadic-matcher
Version:        0.1
Synopsis:       A State-monad-based harmonic pattern matcher
Description:
  Two Haskell programs that demonstrate pattern matcher by
  way of a monadic pipeline. Price bars feed the extrema
  matcher, which in turn feeds the pattern matcher. The
  program SampleApp counts the patterns and has not been
  tuned to exclude any. The SampleGraphApp program simply
  displays a naked price chart--no axes, labels or patterns.
License:        BSD3
Build-Type:     Simple
Author:         Bob Grudem
Maintainer:     bobgru@hotmail.com
Cabal-Version:  >= 1.2

Executable SampleApp
  Build-Depends:  base, OpenGL, parsec, mtl
  Main-Is:        SampleApp.hs

Executable SampleGraphApp
  Build-Depends:  base, OpenGL, GLUT, parsec, mtl
  Main-Is:        SampleGraphApp.hs
